# multi-agent-orchestration-evals

./: CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.beads/: metadata.json
docs/: METRICS.md  TASK_SCHEMA.md
docs/literature/: beads.md  bibliography.md  context-management.md  gas-town.md  mcp-atlas.md  multiagentbench.md  swe-bench.md  wasteland.md
harness/: __init__.py  cli.py  models.py  oracle.py  runner.py  scoring.py
harness/adapters/: __init__.py  base.py  claude_code.py
paper/: outline.md
tasks/: schema.yaml
tasks/adversarial/: adv_001.yaml
tasks/long_horizon/: lh_001.yaml
tasks/parallel_multi/: pm_001.yaml
tasks/single_agent/: sa_001.yaml
tests/unit/: test_models.py  test_scoring.py
